# reaktoro_enabled_watertap

./: .gitignore  COPYRIGHT.md  LICENSE.md  README copy.md  README.md  conda_setup.yaml  conda_setup.yml  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
src/reaktoro_enabled_watertap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/reaktoro_enabled_watertap/analysis_scripts/: stability_sweep.py  stability_sweep_config.yaml
src/reaktoro_enabled_watertap/analysis_scripts/property_comparison/: README.md
src/reaktoro_enabled_watertap/analysis_scripts/softening_acid_ro/: README.md
src/reaktoro_enabled_watertap/costing/: amusat_2024_costing.py  amusat_2024_stoichiometric_reactor_costing.py
src/reaktoro_enabled_watertap/flowsheets/: softening_acid_ro.py
src/reaktoro_enabled_watertap/flowsheets/softening_acid_ro/: softening_acid_ro.py
src/reaktoro_enabled_watertap/property_models/: mcas_with_enthalpy.py
src/reaktoro_enabled_watertap/unit_models/: chemical_addition_unit.py  evaporator.py  multi_comp_erd_unit.py  multi_comp_feed_unit.py  multi_comp_mvc.py  multi_comp_ph_mixer_unit.py  multi_comp_ph_splitter.py  multi_comp_product_unit.py  multi_comp_pump_unit.py  multi_comp_ro_unit.py  precipitation_unit.py
src/reaktoro_enabled_watertap/utils/: connection_utility.py  ipopt_performance_utils.py  reaktoro_utils.py  report_util.py  scale_utils.py  watertap_flowsheet_block.py
src/reaktoro_enabled_watertap/water_sources/: Seawater.yaml  USDA_brackish.yaml  sample_1500_hardness.yaml  sample_500_hardness.yaml  source_water_importer.py
(+42 files in other folders)
