[project]
name = "reaktoro_enabled_watertap"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "pyomo",
    "idaes-pse>=2.5.0",
    "watertap>=1.0.0",
    "psPlotKit @ git+https://github.com/avdudchenko/psPlotKit.git@v0.22",
    "reaktoro-pse @ git+https://github.com/watertap-org/reaktoro-pse.git",
    "parameter-sweep @ git+https://github.com/watertap-org/parameter-sweep.git", # grab latest version
]


[pytest]
markers = [
    "analysis: marks tests as analysis (deselect with '-m \"not analysis\"')",
    "flowsheets: marks tests as flowsheets (deselect with '-m \"not flowsheets\"')",
    "core: marks tests as core (deselect with '-m \"not core\"')",
    "core: marks tests as core (deselect with '-m \"not core\"')",
]